--- a/css/main.css
+++ b/css/main.css
@@ -942,7 +942,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin: 6rem 0 3rem;
 }
 .skill-bars li {
-	height: .6rem;
+	height: 23px;
 	background: #a1a1a1;
 	width: 100%;
 	margin-bottom: 6rem;
@@ -960,34 +960,21 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 }
-.skill-bars li .progress {
-	background: #313131;
-	position: relative;
-	height: 100%;
-}
 .skill-bars li .progress span {
-	position: absolute;
 	right: 0;
 	top: -3.6rem;
+	height: 23px;
 	display: block;
+	text-align: right;
 	font-family: "poppins-regular", sans-serif;
 	color: white;
-	font-size: 1.1rem;
+	font-size: 1.4rem;
 	line-height: 1;
-	background: #313131;
+	background: #FF0077;
 	padding: .6rem .6rem;
 	border-radius: 3px;
 }
-.skill-bars li .progress span::after {
-	position: absolute;
-	left: 50%;
-	bottom: -5px;
-	margin-left: -5px;
-	border-right: 5px solid transparent;
-	border-left: 5px solid transparent;
-	border-top: 5px solid #313131;
-	content: "";
-}
+
 
 .skill-bars li .percent5   { width: 5%; }
 .skill-bars li .percent10  { width: 10%; }
