--- a/css/main.css
+++ b/css/main.css
@@ -947,6 +947,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	width: 100%;
 	margin-bottom: 6rem;
 	padding: 0;
+        border-radius: 3px;
 	position: relative;
 }
 .skill-bars li strong {
