--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,6 @@
-/**
- * ===================================================================
- *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
- *  ------------------------------------------------------------------
- *  TOC:
- *  01. webfonts and iconfonts
- *  02. base style overrides
- *  03. typography & general theme styles
- *  04. preloader
- *  05. forms
- *  06. buttons
- *  07. other components
- *  08. common styles
- *  09. header styles
- *  10. intro
- *  11. about
- *  12. resume
- *  13. portfolio
- *  14. call-to-action section
- *  15. services
- *  16. stats
- *  17. contact
- *  18. footer
- *
- * ===================================================================
- */
-
-
-/**
- * ===================================================================
- * 01. webfonts and iconfonts - (_document-setup.scss)
- *
- * -------------------------------------------------------------------
- */
 @import url("fonts.css");
 @import url("font-awesome/css/font-awesome.min.css");
 @import url("micons/micons.css");
-
-
-/**
- * ===================================================================
- * 02. base style overrides - (_document-setup.scss)
- *
- * -------------------------------------------------------------------
- */
 html {
 	font-size: 10px;
 }
@@ -90,7 +45,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: #FF0077;
+	color: #db4317;
 	outline: 0;
 }
 
@@ -301,7 +256,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: #db4317;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -309,7 +264,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #FF0077;
+	color: #db4317;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -429,7 +384,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #db4317;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -472,7 +427,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid #db4317;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -594,8 +549,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #cc005f;
-	border-bottom: 1px solid #FF0077;
+	color: #f8744d;
+	border-bottom: 1px solid #db4317;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -734,8 +689,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #FF0077;
-	color: #FF0077;
+	border: 3px solid #db4317;
+	color: #db4317;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -923,7 +878,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #FF0077;
+	color: #db4317;
 }
 .stats-tabs li a em {
 	display: block;
@@ -970,7 +925,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: white;
 	font-size: 1.4rem;
 	line-height: 1;
-	background: #FF0077;
+	background: #db4317;
 	padding: .6rem .6rem;
 	border-radius: 3px;
 }
@@ -1026,7 +981,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #FF0077;
+	color: #db4317;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1102,7 +1057,7 @@ header .top-bar {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: #db4317;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1160,7 +1115,7 @@ header .top-bar {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #ff0077;
+	background-color: #db4317;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1216,12 +1171,12 @@ header .top-bar {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #FF0077;
+	color: #db4317;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #FF0077;
+	color: #db4317;
 }
 
 /**
@@ -1301,7 +1256,7 @@ header .top-bar {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #cc005f;
+	color: #f8744d;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1348,7 +1303,7 @@ header .top-bar {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: #f8744d;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1379,7 +1334,7 @@ header .top-bar {
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: #cc005f;
+	color: #f8744d;
 }
 
 /**
@@ -1592,7 +1547,7 @@ header .top-bar {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #FF0077;
+	color: #db4317;
 }
 
 #resume .resume-timeline {
@@ -1919,7 +1874,7 @@ header .top-bar {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #cc005f;
+	background: #f8744d;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2085,7 +2040,7 @@ header .top-bar {
 	color: white;
 }
 #services .section-intro h5 {
-	color: #FF0077;
+	color: #db4317;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2107,7 +2062,7 @@ header .top-bar {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #FF0077;
+	color: #db4317;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2135,7 +2090,7 @@ header .top-bar {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: #db4317;
 }
 
 
@@ -2221,7 +2176,7 @@ header .top-bar {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: #FF0077;
+	color: #db4317;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2274,7 +2229,7 @@ header .top-bar {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: #db4317;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2283,7 +2238,7 @@ header .top-bar {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid #db4317;
 	content: "";
 }
 #contact input[type="text"],
@@ -2305,7 +2260,7 @@ header .top-bar {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: #FF0077;
+	border-color: #db4317;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2313,7 +2268,7 @@ header .top-bar {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: #db4317;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2325,11 +2280,11 @@ header .top-bar {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: #db4317;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: #cc005f;
+	background: #f8744d;
 }
 #message-warning, #message-success {
 	display: none;
@@ -2343,7 +2298,7 @@ header .top-bar {
 	color: #fa0003;
 }
 #message-success {
-	color: #FF0077;
+	color: #db4317;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2388,7 +2343,7 @@ header .top-bar {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #FF0077;
+	color: #db4317;
 }
 
 /**
@@ -2462,7 +2417,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #FF0077;
+	color: #db4317;
 }
 footer .row {
 	max-width: 900px;
@@ -2543,7 +2498,7 @@ footer .copyright span:last-child::after {
 	width: 4rem;
 	line-height: 4rem;
 	text-align: center;
-	background: #cc005f;
+	background: #f8744d;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
@@ -2569,7 +2524,7 @@ line-height: 6.6rem;
 padding: 0 3rem;
 margin-top: 4.8rem;
 width: 100%;
-background: #FF0077;
+background: #db4317;
 color: #FFFFFF;
 }
 
