--- a/cfc/style.css
+++ b/cfc/style.css
@@ -20,6 +20,7 @@ body{
   justify-content: center;
   background: #fff;
   width: 80%;
+  height:
   display: inline-block;
   margin-bottom: 5%;
 }
@@ -40,20 +41,19 @@ input[type=number] {
 
 .input{
   width:78%;
-  height: 46px;
+  height: 10%;
   background-color:#ccd8d6;
   border: none;
   outline: none;
-  font-size: 15px;
+  font-size: 100%;
   font-weight: 300;
   color: #2a2a2a;
   padding: 0px 5px;
   margin-bottom: 20px;
 }
 .fee{
-  height: 15%;
   width: 80%;
-  padding: 5px;
+  padding: 1%;
   margin-left: 10%;
   margin-right: 10%;
   background-color: #ccd8d6;
@@ -65,7 +65,7 @@ input[type=number] {
 .button{
   width: 80%;
   background-color: #21ba9e;
-  font-size: 15px;
+  font-size: 100%;
   color: #fff;
   text-transform: capitalize;
   padding: 12px 25px;
