--- a/cfc/style.css
+++ b/cfc/style.css
@@ -1,5 +1,5 @@
 body{
-  background:#ccd8d6;
+  background:#ebecec;
   text-align: center;
 }
 .tab-full {
@@ -19,7 +19,8 @@ body{
   align-items: center;
   justify-content: center;
   background: #fff;
-  width: 80%;
+  width: 70%;
+  box-shadow: 10px 10px 5px #21ba9e;
   height:
   display: inline-block;
   margin-bottom: 5%;
@@ -42,7 +43,7 @@ input[type=number] {
 .input{
   width:78%;
   height: 10%;
-  background-color:#ccd8d6;
+  background-color:#ebecec;
   border: none;
   outline: none;
   font-size: 100%;
@@ -56,7 +57,7 @@ input[type=number] {
   padding: 1%;
   margin-left: 10%;
   margin-right: 10%;
-  background-color: #ccd8d6;
+  background-color: #ebecec;
   font-weight: bold;
   text-align: left;
   margin-bottom: 7%;
