--- a/css/main.css
+++ b/css/main.css
@@ -2514,7 +2514,7 @@ footer .copyright span:last-child::after {
 	line-height: inherit;
 }
 #go-top a:hover {
-	background: #000000;
+	background: #db4317;
 }
 .sendBTN{
 	font-size: 1.5rem;
