--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 html, body {
   overflow-x: hidden;
+  user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 /**
