--- a/infellas/assets/css/main.css
+++ b/infellas/assets/css/main.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@300&display=swap');
+body{
+    font-family: 'Sora', sans-serif;
+}
 .main {
     width: 100%;
     height: 100%;
